pkgs/dartcv_core/src/imgproc.h

// TODO
// Constructs the Gaussian pyramid for an image.
// void cv::buildPyramid (InputArray src, OutputArrayOfArrays dst, int maxlevel, int borderType=BORDER_DEFAULT)

// Dilates an image by using a specific structuring element.
// void cv::dilate (InputArray src, OutputArray dst, InputArray kernel, Point anchor=Point(-1,-1), int iterations=1, int borderType=BORDER_CONSTANT, const Scalar &borderValue=morphologyDefaultBorderValue())
CvStatus *Dilate(Mat src, Mat dst, Mat kernel);
CvStatus *DilateWithParams(
    Mat src, Mat dst, Mat kernel, Point anchor, int iterations, int borderType, Scalar borderValue
);
// void cv::blendLinear (InputArray src1, InputArray src2, InputArray weights1, InputArray weights2, OutputArray dst)

// void cv::distanceTransform (InputArray src, OutputArray dst, int distanceType, int maskSize, int dstType=CV_32F)

// Calculates the distance to the closest zero pixel for each pixel of the source image.
// void cv::distanceTransform (InputArray src, OutputArray dst, OutputArray labels, int distanceType, int maskSize, int labelType=DIST_LABEL_CCOMP)
CvStatus *
DistanceTransform(Mat src, Mat dst, Mat labels, int distanceType, int maskSize, int labelType);
// Draws contours outlines or filled contours.
// void cv::drawContours (InputOutputArray image, InputArrayOfArrays contours, int contourIdx, const Scalar &color, int thickness=1, int lineType=LINE_8, InputArray hierarchy=noArray(), int maxLevel=INT_MAX, Point offset=Point())
CvStatus *DrawContours(Mat src, VecVecPoint contours, int contourIdx, Scalar color, int thickness);
CvStatus *DrawContoursWithParams(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    int lineType,
    Mat hierarchy,
    int maxLevel,
    Point offset
);
// Draws a marker on a predefined position in an image.
// void cv::drawMarker (InputOutputArray img, Point position, const Scalar &color, int markerType=MARKER_CROSS, int markerSize=20, int thickness=1, int line_type=8)


// Draws a simple or thick elliptic arc or fills an ellipse sector.
// void cv::ellipse (InputOutputArray img, Point center, Size axes, double angle, double startAngle, double endAngle, const Scalar &color, int thickness=1, int lineType=LINE_8, int shift=0)
// void cv::ellipse (InputOutputArray img, const RotatedRect &box, const Scalar &color, int thickness=1, int lineType=LINE_8)
CvStatus *Ellipse(
    Mat img,
    Point center,
    Point axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness
);
CvStatus *EllipseWithParams(
    Mat img,
    Point center,
    Point axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    int lineType,
    int shift
);
// SECTION - Color Space Conversions
// Converts an image from one color space to another.
// void cv::cvtColor (InputArray src, OutputArray dst, int code, int dstCn=0, AlgorithmHint hint=cv::ALGO_HINT_DEFAULT)
CvStatus *CvtColor(Mat src, CVD_OUT Mat dst, int code);
// Finds the convexity defects of a contour.
// void cv::convexityDefects (InputArray contour, InputArray convexhull, OutputArray convexityDefects)
CvStatus *ConvexityDefects(VecPoint points, Mat hull, Mat result);
// Calculates eigenvalues and eigenvectors of image blocks for corner detection.
// void cv::cornerEigenValsAndVecs (InputArray src, OutputArray dst, int blockSize, int ksize, int borderType=BORDER_DEFAULT)

// Harris corner detector.
// void cv::cornerHarris (InputArray src, OutputArray dst, int blockSize, int ksize, double k, int borderType=BORDER_DEFAULT)

// Calculates the minimal eigenvalue of gradient matrices for corner detection.
// void cv::cornerMinEigenVal (InputArray src, OutputArray dst, int blockSize, int ksize=3, int borderType=BORDER_DEFAULT)

// Refines the corner locations.
// void cv::cornerSubPix (InputArray image, InputOutputArray corners, Size winSize, Size zeroZone, TermCriteria criteria)
CvStatus *
CornerSubPix(Mat img, VecPoint2f corners, Size winSize, Size zeroZone, TermCriteria criteria);