packages/dartcv/lib/src/g/imgproc.g.dart


  late final _ConvexHull_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, ffi.Bool, ffi.Bool,
              imp1.CvCallback_1)>>('ConvexHull_Async');
  late final _ConvexHull_Async = _ConvexHull_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, bool, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> ConvexityDefects(
    VecPoint points,
    Mat hull,
    Mat result,
  ) {
    return _ConvexityDefects(
      points,
      hull,
      result,
    );
  }

  late final _ConvexityDefectsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(VecPoint, Mat, Mat)>>(
      'ConvexityDefects');
  late final _ConvexityDefects = _ConvexityDefectsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, Mat, Mat)>();

  ffi.Pointer<CvStatus> ConvexityDefects_Async(
    VecPoint points,
    Mat hull,
    imp1.CvCallback_1 callback,
  ) {
    return _ConvexityDefects_Async(
      points,
      hull,
      callback,
    );
  }

  late final _ConvexityDefects_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, Mat, imp1.CvCallback_1)>>('ConvexityDefects_Async');
  late final _ConvexityDefects_Async = _ConvexityDefects_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> CornerSubPix(
    Mat img,
    VecPoint2f corners,
    CvSize winSize,
    CvSize zeroZone,
    TermCriteria criteria,
  ) {
    return _CornerSubPix(
      img,
      corners,
      winSize,
      zeroZone,
      criteria,
    );
  }

  late final _CornerSubPixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, VecPoint2f, CvSize, CvSize, TermCriteria)>>('CornerSubPix');
  late final _CornerSubPix = _CornerSubPixPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecPoint2f, CvSize, CvSize, TermCriteria)>();

  ffi.Pointer<CvStatus> CornerSubPix_Async(
    Mat img,
    VecPoint2f corners,
    CvSize winSize,
    CvSize zeroZone,
    TermCriteria criteria,
    imp1.CvCallback_0 callback,
  ) {
    return _CornerSubPix_Async(
      img,
      corners,
      winSize,
      zeroZone,
      criteria,
      callback,
    );
  }

  late final _CornerSubPix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, VecPoint2f, CvSize, CvSize,
              TermCriteria, imp1.CvCallback_0)>>('CornerSubPix_Async');
  late final _CornerSubPix_Async = _CornerSubPix_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecPoint2f, CvSize, CvSize, TermCriteria, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> CvtColor(
    Mat src,
    Mat dst,
    int code,
  ) {
    return _CvtColor(
      src,
      dst,
      code,
    );
  }

  late final _CvtColorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int)>>('CvtColor');
  late final _CvtColor =
      _CvtColorPtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, int)>();

  ffi.Pointer<CvStatus> CvtColor_Async(
    Mat src,
    int code,
    imp1.CvCallback_1 callback,
  ) {
    return _CvtColor_Async(
      src,
      code,
      callback,
    );
  }

  late final _CvtColor_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, ffi.Int, imp1.CvCallback_1)>>('CvtColor_Async');
  late final _CvtColor_Async = _CvtColor_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Dilate(
    Mat src,
    Mat dst,
    Mat kernel,
  ) {
    return _Dilate(
      src,
      dst,
      kernel,
    );
  }

  late final _DilatePtr = _lookup<
      ffi
      .NativeFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>>('Dilate');
  late final _Dilate =
      _DilatePtr.asFunction<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat)>();

  ffi.Pointer<CvStatus> DilateWithParams(
    Mat src,
    Mat dst,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
  ) {
    return _DilateWithParams(
      src,
      dst,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
    );
  }

  late final _DilateWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, CvPoint, ffi.Int,
              ffi.Int, Scalar)>>('DilateWithParams');
  late final _DilateWithParams = _DilateWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, Mat, CvPoint, int, int, Scalar)>();

  ffi.Pointer<CvStatus> DilateWithParams_Async(
    Mat src,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    imp1.CvCallback_1 callback,
  ) {
    return _DilateWithParams_Async(
      src,
      kernel,
      anchor,
      iterations,
      borderType,
      borderValue,
      callback,
    );
  }

  late final _DilateWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, CvPoint, ffi.Int, ffi.Int,
              Scalar, imp1.CvCallback_1)>>('DilateWithParams_Async');
  late final _DilateWithParams_Async = _DilateWithParams_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, CvPoint, int, int, Scalar, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> Dilate_Async(
    Mat src,
    Mat kernel,
    imp1.CvCallback_1 callback,
  ) {
    return _Dilate_Async(
      src,
      kernel,
      callback,
    );
  }

  late final _Dilate_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, imp1.CvCallback_1)>>('Dilate_Async');
  late final _Dilate_Async = _Dilate_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> DistanceTransform(
    Mat src,
    Mat dst,
    Mat labels,
    int distanceType,
    int maskSize,
    int labelType,
  ) {
    return _DistanceTransform(
      src,
      dst,
      labels,
      distanceType,
      maskSize,
      labelType,
    );
  }

  late final _DistanceTransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Int, ffi.Int, ffi.Int)>>('DistanceTransform');
  late final _DistanceTransform = _DistanceTransformPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, int, int, int)>();

  ffi.Pointer<CvStatus> DistanceTransform_Async(
    Mat src,
    int distanceType,
    int maskSize,
    int labelType,
    imp1.CvCallback_2 callback,
  ) {
    return _DistanceTransform_Async(
      src,
      distanceType,
      maskSize,
      labelType,
      callback,
    );
  }

  late final _DistanceTransform_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Int, ffi.Int, ffi.Int,
              imp1.CvCallback_2)>>('DistanceTransform_Async');
  late final _DistanceTransform_Async = _DistanceTransform_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, int, int, int, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> DrawContours(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
  ) {
    return _DrawContours(
      src,
      contours,
      contourIdx,
      color,
      thickness,
    );
  }

  late final _DrawContoursPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, VecVecPoint, ffi.Int, Scalar, ffi.Int)>>('DrawContours');
  late final _DrawContours = _DrawContoursPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, int, Scalar, int)>();

  ffi.Pointer<CvStatus> DrawContoursWithParams(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    int lineType,
    Mat hierarchy,
    int maxLevel,
    CvPoint offset,
  ) {
    return _DrawContoursWithParams(
      src,
      contours,
      contourIdx,
      color,
      thickness,
      lineType,
      hierarchy,
      maxLevel,
      offset,
    );
  }

  late final _DrawContoursWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              VecVecPoint,
              ffi.Int,
              Scalar,
              ffi.Int,
              ffi.Int,
              Mat,
              ffi.Int,
              CvPoint)>>('DrawContoursWithParams');
  late final _DrawContoursWithParams = _DrawContoursWithParamsPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecVecPoint, int, Scalar, int, int, Mat, int, CvPoint)>();

  ffi.Pointer<CvStatus> DrawContoursWithParams_Async(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    int lineType,
    Mat hierarchy,
    int maxLevel,
    CvPoint offset,
    imp1.CvCallback_0 callback,
  ) {
    return _DrawContoursWithParams_Async(
      src,
      contours,
      contourIdx,
      color,
      thickness,
      lineType,
      hierarchy,
      maxLevel,
      offset,
      callback,
    );
  }

  late final _DrawContoursWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              VecVecPoint,
              ffi.Int,
              Scalar,
              ffi.Int,
              ffi.Int,
              Mat,
              ffi.Int,
              CvPoint,
              imp1.CvCallback_0)>>('DrawContoursWithParams_Async');
  late final _DrawContoursWithParams_Async =
      _DrawContoursWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, int, Scalar, int,
              int, Mat, int, CvPoint, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> DrawContours_Async(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    imp1.CvCallback_0 callback,
  ) {
    return _DrawContours_Async(
      src,
      contours,
      contourIdx,
      color,
      thickness,
      callback,
    );
  }

  late final _DrawContours_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, ffi.Int, Scalar,
              ffi.Int, imp1.CvCallback_0)>>('DrawContours_Async');
  late final _DrawContours_Async = _DrawContours_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, VecVecPoint, int, Scalar, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> Ellipse(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
  ) {
    return _Ellipse(
      img,
      center,
      axes,
      angle,
      startAngle,
      endAngle,
      color,
      thickness,
    );
  }

  late final _EllipsePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, ffi.Double,
              ffi.Double, ffi.Double, Scalar, ffi.Int)>>('Ellipse');
  late final _Ellipse = _EllipsePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvPoint, CvPoint, double, double, double, Scalar, int)>();

  ffi.Pointer<CvStatus> EllipseWithParams(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
  ) {
    return _EllipseWithParams(
      img,
      center,
      axes,
      angle,
      startAngle,
      endAngle,
      color,
      thickness,
      lineType,
      shift,
    );
  }
